Remove deprecated Long constructor use